--- a/gpuvsink/src/Makefile.am
+++ b/gpuvsink/src/Makefile.am
@@ -14,7 +14,6 @@ libgstgpuvsink_la_SOURCES = \
 	gst_render_bridge.c  \
 	gstsink_plugin.c
 
-GSDK_KM_DIR = $(GSDK_ROOT)/GFX_Linux_KM
 CMEM_LIB     ?= $(CMEM_DIR)/lib/cmem.a470MV
 GST_PLUGIN_BASE = $(GSTREAMER_SRC_DIR)/gst-plugins-base-0.10.30/
 
@@ -23,12 +22,7 @@ GST_PLUGIN_BASE = $(GSTREAMER_SRC_DIR)/gst-plugins-base-0.10.30/
 libgstgpuvsink_la_CFLAGS = $(GST_CFLAGS) $(GST_BASE_CFLAGS) \
 	$(GST_PLUGINS_BASE_CFLAGS) \
 	-DLINUX \
-	-I$(GSDK_KM_DIR)/include4 \
 	-I$(CMEM_DIR)/include \
-	-I$(GSDK_KM_DIR)/services4/include \
-	-I$(GSDK_KM_DIR)/services4/3rdparty/bufferclass_ti \
-	-I$(GSDK_ROOT)/include/OGLES \
-	-I$(GSDK_ROOT)/include/OGLES2 \
 	-I$(top_srcdir)/khronos \
 	-I$(top_srcdir)/module \
 	-I$(GST_PLUGIN_BASE)/gst-libs/
@@ -36,8 +30,7 @@ libgstgpuvsink_la_CFLAGS = $(GST_CFLAGS) $(GST_BASE_CFLAGS) \
 libgstgpuvsink_la_LIBADD = \
 	$(GST_BASE_LIBS) \
 	$(GST_PLUGINS_BASE_LIBS) \
-        -L$(TGTFS_PATH)/lib  -lgstvideo-0.10 \
-        -L$(GSDK_ROOT)/gfx_rel_es8.x  -lGLESv2 -lEGL
+        -L$(TGTFS_PATH)/lib  -lgstvideo-0.10
 
 AM_CXXFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_BASE_CFLAGS) $(GST_CFLAGS) $(libgstgpuvsink_la_CFLAGS) $(libgstgpuvsink_la_LIBADD)
 libgstgpuvsink_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
